--- a/static/index.html
+++ b/static/index.html
@@ -3,24 +3,28 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Face Attendance System - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Face Attendance System - Home</title>
     <link rel="stylesheet" href="/static/css/style.css" />
 </head>
 
 <body>
     <header>
-        📸 Face Attendance System
+        <h1>📸 Face Attendance System</h1>
     </header>
+
     <main>
-        <h2>Welcome!</h2>
-        <p>Select an option below:</p>
-        <button onclick="location.href='/static/register.html'">Register User</button>
-        <a href="/attendance/camera">
-            <button>Desktop Camera Attendance</button>
-        </a>
-        <button onclick="location.href='qrs'">Mobile Attendance</button>
+        <section class="welcome">
+            <h2>Welcome!</h2>
+            <p>Select an option below:</p>
+            <div class="button-group">
+                <button onclick="location.href='/static/register_qr_gallery.html'">Register User</button>
+                <button onclick="location.href='/static/attendance_camera.html'">Desktop / Laptop Attendance</button>
+                <button onclick="location.href='qrs'">Mobile Attendance</button>
+            </div>
+        </section>
     </main>
+
     <footer>
         &copy; 2025 RK Shailendra Kumar C S. All rights reserved.
     </footer>
