--- a/static/attendance_form.html
+++ b/static/attendance_form.html
@@ -2,25 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <title>Mark Attendance</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <title>Face Attendance</title>
     <link rel="stylesheet" href="/static/css/attendance.css" />
 </head>
 
 <body>
-    <header>
-        📸 Mark Your Attendance
-    </header>
-    <main>
-        <h2>Upload Your Photo</h2>
-        <input type="file" accept="image/*" capture="user" id="fileInput" /><br><br>
-        <button id="submitBtn">Submit Photo</button>
-        <p id="message"></p>
-    </main>
-    <footer>
-        &copy; 2025 Your Organization
-    </footer>
+    <h1>Face Attendance</h1>
+    <form id="attendanceForm">
+        <div class="step active" id="step">
+            <h2>Upload Face Image</h2>
+            <input type="file" id="image" accept="image/*" capture="user" required />
+            <div class="preview-container">
+                <img id="previewImage" class="preview" alt="Image preview" />
+            </div>
+            <button type="submit">Mark Attendance</button>
+        </div>
+    </form>
+
+    <div id="status"></div>
+
     <script src="/static/js/attendance.js"></script>
 </body>
 
