--- a/static/qrs_gallery.html
+++ b/static/qrs_gallery.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QR Code Gallery</title>
+    <title>Mobile Attendance</title>
     <link rel="stylesheet" href="/static/css/qrs_gallery.css" />
 </head>
 
@@ -15,7 +15,7 @@
                 <span class="theme-icon">🌙</span>
                 <span class="theme-label">Dark</span>
             </button>
-            <h1>QR Code Gallery</h1>
+            <h1>Mobile Attendance</h1>
         </div>
     </header>
 
